--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.16.2",
     "gl-matrix": "^2.4.0",
     "interactjs": "^1.3.2",
-    "uuid": "^3.1.0"
+    "uuid": "^3.1.0",
+    "webgl-obj-loader": "^1.0.0"
   }
 }
