--- a/package.json
+++ b/package.json
@@ -18,13 +18,10 @@
   },
   "dependencies": {
     "@types/gl-matrix": "^2.4.0",
-    "@types/interact.js": "^1.0.22",
     "@types/uuid": "^3.4.3",
     "@types/webaudioapi": "0.0.27",
     "express": "^4.16.2",
     "gl-matrix": "^2.4.0",
-    "interactjs": "^1.3.2",
-    "uuid": "^3.1.0",
-    "webgl-obj-loader": "^1.0.0"
+    "uuid": "^3.1.0"
   }
 }
