--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
         "outDir": "./dist/",
         "sourceMap": true,
         "noImplicitAny": true,
+        "strictNullChecks": false,
         "module": "es6",
         "target": "es2015"
     }
